# generator-cpp-suite

./: .travis.yml  README.markdown  index.html  package.json  params.json  travis  travis.sh
addclass/: index.js
addclass/templates/src/: foo.cpp  foo.hpp
addclass/templates/tests/: foo.cpp
app/: index.js
app/templates/: CMakeLists.txt  _gitignore  project_name.pc.in
app/templates/benchmarks/: CMakeLists.txt  main.cpp
app/templates/doc/: CMakeLists.txt  Doxyfile.in
app/templates/examples/: CMakeLists.txt
app/templates/src/: CMakeLists.txt
app/templates/tests/: CMakeLists.txt
